<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/main"
        android:gravity="right"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#00aaff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="#00ffffff"
                android:text="@string/back"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_mode"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="#00ffffff"
                android:text="@string/meoth"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_music"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:divider="#00aaff"
            android:scrollbars="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3300aaff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sin"
                android:textColor="#00aaff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cur_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/starttime"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100" />

                <TextView
                    android:id="@+id/tv_total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/firsttime"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/pre_button_default"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/iv_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/play_button_default"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/iv_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/next_button_default"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#00aaff"
        tools:ignore="RtlHardcoded">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/nv_main_menu"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:id="@+id/iv_cl"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@mipmap/my"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="#683FB5"
                    android:padding="5dp" />

                <Button
                    android:id="@+id/btn_cl_xx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#00aaff"
                    android:padding="10dp"
                    android:text="@string/消息中心"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_time_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00aaff"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/ds"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_cl_pf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/sd"
                    android:background="#00aaff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_cl_hy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/hy"
                    android:background="#00aaff"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#683FB5"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btn_cl_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:background="#00aaff"
                    android:text="@string/ll"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_cl_pan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00aaff"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/sr"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#683FB5"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btn_cl_yx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/kshe"
                    android:background="#00aaff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_cl_sq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#00aaff"
                    android:padding="10dp"
                    android:text="@string/tingqu"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_cl_gj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#00aaff"
                    android:padding="10dp"
                    android:text="@string/yyue"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_cl_cl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cling"
                    android:background="#00aaff"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            tools:ignore="NotSibling">

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/shezhi"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/tuichi"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>